--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 ::root{
     --letterColor: #373737;
     --titleColor: #272727;
+    --buttonColor: #D90C0C;
 }
 .transition{
     transition: all 300ms;
@@ -19,7 +20,7 @@
 /* NAVBAR */
 header{
     width: 100%;
-    height: 90px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,6 +41,9 @@ header{
     align-items: center;
     justify-content: center;
 }
+.headerLogo img{
+    width: 220px;
+}
 nav{
     height: 100%;
 }
@@ -53,11 +57,8 @@ nav ul{
 }
 nav ul li{
     margin: 0 10px;
-    padding: 0 20px;
-    border: 2px solid transparent;
-    border-radius: 10px;
 }
-nav ul li:hover{
+nav ul a:hover{
     border: 2px solid #e4e4e4;
     transform: translate(0, -5px);
 }
@@ -66,9 +67,13 @@ nav ul li a{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    font-weight: 300;
+    padding: 0 20px;
+    border: 2px solid transparent;
+    border-radius: 10px;
 }
 nav ul li a svg{
-    width: 40px;
+    width: 35px;
 }
 
 /* BG INICIO */
@@ -78,7 +83,7 @@ nav ul li a svg{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(rgba(121, 0, 0, 0.3), rgba(121, 0, 0, 0.3)), url(../assets/img/bgMoto.jpg) no-repeat center center/cover;
+    background: linear-gradient(rgba(121, 0, 0, 0.3), rgba(121, 0, 0, 0.3)), url(../assets/img/bgMotoBoy.webp) no-repeat center center/cover;
 }
 .txtInicio{
     text-align: center;
@@ -107,3 +112,24 @@ nav ul li a svg{
 .txtInicio a:hover{
     background: transparent;
 }
+
+/* WHATSAPP ICON */
+.whatsappIcon{
+    z-index: 100;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    background: #4dc247;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+    border-radius: 50%;
+}
+.whatsappIcon:hover{
+    transform: translate(0, -8px);
+}
+.whatsappIcon a svg{
+    padding: 5px;
+    width: 45px;
+    vertical-align: middle;
+}
+
+/* NEW PRODUCTS */
