--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,23 @@
     --titleColor: #272727;
     --buttonColor: #D90C0C;
 }
+
+body{
+    background: #F2F2F2;
+}
+
 .transition{
     transition: all 300ms;
+}
+
+/* -- SCROLLBAR -- */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #D90C0C;
+  border-radius: 6px;
 }
 
 /* NAVBAR */
@@ -24,9 +39,10 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid #f5f5f5;
+    border-bottom: 2px solid #e4e4e4;
     position: fixed;
     background: #FFF;
+    box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.062745098);
 }
 .navbar{
     width: 85%;
@@ -133,3 +149,62 @@ nav ul li a svg{
 }
 
 /* NEW PRODUCTS */
+.newProducts{
+    margin-top: 100px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.newProducts__title h2{
+    color: var(--titleColor);
+    font-size: 3rem;
+    margin-bottom: 50px;
+}
+.newProducts__catalogue{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 90%;
+    height: auto;
+}
+.catalogue__product{
+    width: 224px;
+    height: 350px;
+    background-color: white;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    border: 2px solid #f7f7f7;
+}
+.catalogue__product img{
+    width: 100%;
+    overflow: hidden;
+}
+.catalogue__product span{
+    margin-top: 20px;
+    color: var(--letterColor);
+    font-size: 1.8rem;
+    opacity: .5;
+}
+.catalogue__product button{
+    margin-top: 10px;
+    background: #D90C0C;
+    padding: 10px 20px;
+    border: 2px solid #D90C0C;
+    color: white;
+    font-size: 1rem;
+    border-radius: 15px;
+    cursor: pointer;
+}
+.catalogue__product button:hover{
+    color: #D90C0C;
+    background: transparent;
+}
