--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ nav ul li a svg{
 .container_items span{
     position: absolute;
     bottom: 0;
-    background: #D90C0C;
+    background: #d90c0cc9;
     color: #FFF;
     font-weight: 800;
     width: 100%;
