--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ nav ul li a span{
 }
 .txtInicio h1{
     font-size: 3.5rem;
-    color: #ececec;
+    color: #fff4f4;
     font-weight: 600;
     margin-bottom: 10px;
 }
@@ -330,7 +330,7 @@ nav ul li a span{
 .container_items span{
     position: absolute;
     bottom: 0;
-    background: #d90c0cc9;
+    background: #d90c0ceb;
     color: #FFF;
     font-weight: 800;
     width: 100%;
@@ -340,6 +340,49 @@ nav ul li a span{
     height: 30px;
 }
 
+/* TABLA PRODUCTOS */
+.tablaProductos{
+    position: fixed;
+    top: -5000px;
+    background-color: rgba(110, 110, 110, 0.199);
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    transition: all 300ms;
+}
+.tableContainer{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.tableContainer svg {
+    width: 35px;
+    background-color: #D90C0C;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+.tableContainer table{
+    width: 80%;
+    border: 2px solid #D90C0C;
+    background: #FFF;
+}
+.tableContainer table thead th{
+    background-color: #D90C0C;
+    padding: 10px;
+    color: #FFF;
+}
+.tableContainer table tr td{
+    text-align: center;
+    padding: 10px;
+}
+.mostrarTabla{
+    top: 1px;
+}
 
 /* MEDIAQUERIES */
 @media screen and (max-width: 900px) {
@@ -358,6 +401,10 @@ nav ul li a span{
 
     .galeriaProductos__container{
         width: 90%;
+    }
+
+    .bannerDescuento{
+        display: none;
     }
 }
 
