Agrego validaciones a las funciones

--- a/css/style.css
+++ b/css/style.css
@@ -441,6 +441,14 @@ nav ul li a span{
         width: 90%;
     }
 
+    .menuAdmin{
+        flex-direction: column;
+    }
+    .menuAdmin a{
+        margin-left: 0;
+        margin-bottom: 20px;
+    }
+
     .bannerDescuento{
         display: none;
     }
