--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ nav ul{
 }
 nav ul li{
     margin: 0 10px;
+    position: relative;
 }
 nav ul a:hover{
     border: 2px solid #e4e4e4;
@@ -530,7 +531,7 @@ nav ul li a span{
     justify-content: center;
     background: #2c2c2cc9;
     position: fixed;
-    top: -700px;
+    top: -1500px;
 }
 .move-adminMenu{
     top: 0;
@@ -727,3 +728,46 @@ footer{
         margin-top: 20px;
     }
 }
+
+
+/* LOADER CARRITO */
+.load-row {
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+  }
+  
+  .load-row span {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background: #D90C0C;
+    border-radius: 50px;
+    animation: up-down6 0.5s ease-in infinite alternate;
+  }
+  
+  .load-row span:nth-child(2) {
+    background: #D90C0C;
+    animation-delay: 0.16s;
+  }
+  
+  .load-row span:nth-child(3) {
+    background: #D90C0C;
+    animation-delay: 0.32s;
+  }
+  
+  .load-row span:nth-child(4) {
+    background: #D90C0C;
+    animation-delay: 0.48s;
+  }
+  
+  @keyframes up-down6 {
+    0% {
+      transform: translateY(-10px);
+    }
+  
+    100% {
+      transform: translateY(10px);
+    }
+  }
