--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,25 @@ nav ul li a span{
     color: #D90C0C;
 }
 
+.errorCarrito{
+    background-color: #D90C0C;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+    width: 60%;
+    height: 150px;
+    color: #FFF;
+}
+.errorCarrito h3{
+    font-size: 1.6rem;
+}
+.errorCarrito p{
+    font-size: 1.2rem;
+}
+
 /* MENU ADMIN */
 .adminMenu{
     width: 100%;
