--- a/css/style.css
+++ b/css/style.css
@@ -723,6 +723,7 @@ nav ul li a span{
     background-color: #D90C0C;
     border-radius: 20px;
     border: none;
+    margin-bottom: 10px;
 }
 .resumenCompra{
     width: 100%;
@@ -754,16 +755,17 @@ nav ul li a span{
 /* MENU ADMIN */
 .adminMenu{
     width: 100%;
-    height: 100vh;
+    height: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     background: #2c2c2cc9;
+    overflow: hidden;
     position: fixed;
-    top: -1500px;
+    top: 0;
 }
 .move-adminMenu{
-    top: 0;
+    height: 100vh;
 }
 .newProductContainer{
     width: 60%;
@@ -961,9 +963,6 @@ footer{
     .checkoutContainer{
         text-align: center;
         width: 100%;
-    }
-    .infoCompra hr{
-        margin-bottom: 10px;
     }
     .compraContainer{
         grid-template-columns: 100%;
